--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/Index.cshtml
@@ -33,7 +33,7 @@ else
 
         <tr>
             <td>@request.QuantityRequested</td>
-            <td>@request.Vendor</td>
+            <td>@request.VendorName</td>
             <td>@request.ReasonChosen</td>
             <td>@request.EstimatedCost</td>
             <td>@request.EstimatedTotal</td>
