--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_Layout.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                     }
                     else
                     {
-                       // @await Component.InvokeAsync("UserMenu")
+                        @await Component.InvokeAsync("UserMenu")
                     }
 
                 </ul>
