--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/AddItem.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/AddItem.cshtml
@@ -1,4 +1,4 @@
-﻿@model PRWithRequest
+﻿@model RequestWithVendor
 
 @{
     ViewData["Title"] = "AddItem";
@@ -7,5 +7,49 @@
 <h2>AddItem</h2>
 
 
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="AddItem" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label class="control-label">Item Name</label>
+                <input asp-for="ItemName" class="form-control" />
+                <span asp-validation-for="ItemName" class="text-danger"></span>
+            </div>
 
-@Model.EmployeeFullName
+            <div class="form-group">
+                <label class="control-label">Quantity</label>
+                <input asp-for="QuantityRequested" class="form-control" />
+                <span asp-validation-for="QuantityRequested" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label">Estimated Cost</label>
+                <input asp-for="EstimatedCost" class="form-control" />
+                <span asp-validation-for="EstimatedCost" class="text-danger"></span>
+            </div>
+
+            @*<div class="form-group">
+                <label class="control-label">Vendor</label>
+                <input asp-for="VendorId" class="form-control" />
+                <span asp-validation-for="VendorId" class="text-danger"></span>
+            </div>*@
+
+            <div class="form-group">
+                <label class="control-label">Item Description</label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                
+                <input type="submit" asp-route-orderId="@Model.OrderId" class="btn btn-default" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
