--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/Index.cshtml
@@ -18,7 +18,7 @@ else
         <tr>
             <th>DA</th>
             <th>Name</th>
-            <th>Type</th>
+            <th>Annual</th>
             <th>Active</th>
             <th>Total Amount</th>
 
