--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/PurchasingDeptMenu/Default.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/PurchasingDeptMenu/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PurchaseReq.MVC.Components.PurchaseDeptMenuItem>
+﻿@model IEnumerable<PurchaseReq.MVC.Components.PurchasingDeptMenuItem>
 
 <li class="dropdown">
     <a asp-controller="Admin"
