--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/UpdateTotal.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/UpdateTotal.cshtml
@@ -27,14 +27,14 @@
                 <input asp-for="TotalAmount" class="form-control"  />
                 <span asp-validation-for="TotalAmount" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <div class="checkbox">
                     <input asp-for="Type" onclick="return false;"/> @Html.DisplayNameFor(model => model.Type)
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
-                <input type="submit" value="Submit" class="btn btn-default" />
+                <input type="submit" asp-action="UpdateTotal" value="Submit" class="btn btn-default" />
             </div>
         </form>
     </div>
