--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/EditUser.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/EditUser.cshtml
@@ -8,30 +8,27 @@
 <h2>Edit User</h2>
 
 <div class="row">
-    <div class="col-md-4">
-        <form method="post" asp-controller="Admin" asp-action="EditUser">
+    
+    <form method="post" asp-controller="Admin" asp-action="EditUser">
+        <div class="col-md-4">
             <h4 style="color: red">@ViewData["Successful"]</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Password"></label>
                 <input asp-for="Password" class="form-control" type="password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="ConfirmPassword">Confirm Password</label>
                 <input asp-for="ConfirmPassword" class="form-control" type="password" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="FirstName"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -43,31 +40,27 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Active"></label>
+                <input asp-for="Active" class="form-control" />
+                <span asp-validation-for="Active" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label class="control-label">Department</label>
-
-                @Html.DropDownListFor(x => x.DepartmentId, new List<SelectListItem>(ViewBag.Departments))
-
+                @Html.DropDownListFor(x => x.DepartmentId, new List<SelectListItem>(ViewBag.Departments), new { @class = "form-control" })
                 <span asp-validation-for="DepartmentId" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label class="control-label">Room</label>
-
-                @Html.DropDownListFor(x => x.RoomId, new List<SelectListItem>(ViewBag.Rooms));
-
+                @Html.DropDownListFor(x => x.RoomId, new List<SelectListItem>(ViewBag.Rooms), new { @class = "form-control" })
                 <span asp-validation-for="RoomId" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label class="control-label">Role</label>
-
-                @Html.DropDownListFor(x => x.RoleId, new List<SelectListItem>(ViewBag.Roles));
-
+                @Html.DropDownListFor(x => x.RoleId, new List<SelectListItem>(ViewBag.Roles), new { @class = "form-control" })
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
 
-
-            <button type="submit" class="btn btn-primary">Edit</button>
-        </form>
-    </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
 </div>
