--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/EditDepartment.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/EditDepartment.cshtml
@@ -25,10 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DivisionId" class="control-label">Division</label>
-
-                @Html.DropDownListFor(x => x.DivisionId, new List<SelectListItem>(ViewBag.Divisions));
-
-
+                @Html.DropDownListFor(x => x.DivisionId, new List<SelectListItem>(ViewBag.Divisions), new { @class = "form-control" })
                 <span asp-validation-for="DivisionId" class="text-danger"></span>
             </div>
 
