--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/AddDivision.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/AddDivision.cshtml
@@ -16,15 +16,8 @@
                 <span asp-validation-for="DivisionName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
                 <label asp-for="SupervisorId" class="control-label">Supervisor</label>
-                @Html.DropDownListFor(x => x.SupervisorId, new List<SelectListItem>(ViewBag.Supervisors));
+                @Html.DropDownListFor(x => x.SupervisorId, new List<SelectListItem>(ViewBag.Supervisors), new { @class = "form-control" })
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
