--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Departments.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Departments.cshtml
@@ -34,13 +34,9 @@ else
 
 
                 <td>
-                    <form asp-action="DeleteCampus" asp-route-id="@department.Id" method="post">
-                        <a class="btn btn-sm btn-primary" asp-action="EditDivision" asp-route-id="@department.Id">Edit</a>
+                    <form method="post">
+                        <a class="btn btn-sm btn-primary" asp-controller="Department" asp-action="EditDepartment" asp-route-id="@department.Id">Edit</a>
                         <a class="btn btn-sm btn-primary" asp-action="Employees" asp-controller="Department" asp-route-id="@department.Id">View Employees</a>
-
-                        <button type="submit" onclick="return confirm('Do you really want to delete this campus?');" class="btn btn-sm btn-danger">
-                            Delete
-                        </button>
                     </form>
                 </td>
             </tr>
