--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/AddDepartment.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/AddDepartment.cshtml
@@ -19,7 +19,7 @@
             <div class="form-group">
                 <label class="control-label">Division</label>
                 
-                @Html.DropDownListFor(x => x.DivisionId, new List<SelectListItem>(ViewBag.Divisions));
+                @Html.DropDownListFor(x => x.DivisionId, new List<SelectListItem>(ViewBag.Divisions), new { @class = "form-control" })
               
                 <span asp-validation-for="DivisionId" class="text-danger"></span>
             </div>
