--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/AddUser.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/AddUser.cshtml
@@ -43,7 +43,7 @@
             <div class="form-group">
                 <label class="control-label">Department</label>
 
-                @Html.DropDownListFor(x => x.DepartmentId, new List<SelectListItem>(ViewBag.Departments))
+                @Html.DropDownListFor(x => x.DepartmentId, new List<SelectListItem>(ViewBag.Departments), new { @class = "form-control" })
 
                 <span asp-validation-for="DepartmentId" class="text-danger"></span>
             </div>
@@ -51,7 +51,7 @@
             <div class="form-group">
                 <label class="control-label">Room</label>
 
-                @Html.DropDownListFor(x => x.RoomId, new List<SelectListItem>(ViewBag.Rooms));
+                @Html.DropDownListFor(x => x.RoomId, new List<SelectListItem>(ViewBag.Rooms), new { @class = "form-control" })
 
                 <span asp-validation-for="RoomId" class="text-danger"></span>
             </div>
@@ -59,7 +59,7 @@
             <div class="form-group">
                 <label class="control-label">Role</label>
 
-                @Html.DropDownListFor(x => x.RoleId, new List<SelectListItem>(ViewBag.Roles));
+                @Html.DropDownListFor(x => x.RoleId, new List<SelectListItem>(ViewBag.Roles), new { @class = "form-control" })
 
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
