--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/DenyOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/DenyOrder.cshtml
@@ -6,23 +6,45 @@
 }
 
 <h2>DenyOrder</h2>
-<form asp-action="DenyOrder" method="post" asp-controller="Supervisor">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group"
-        <label asp-for="DeniedJustification" class="control-label">Date</label>
-        <input asp-for="DeniedJustification" class="form-control" />
-        <span asp-validation-for="DeniedJustification" class="text-danger"></span>
-     </div>
 
-    <div class="form-group">
-        <input type="submit" value="Deny" class="btn btn-default" />
+
+<div class="row">
+    <div class="col-md-4">
+        <form method="post" asp-controller="Supervisor" asp-action="DenyOrder">
+            <h4 style="color: red">@ViewData["Successful"]</h4>
+            <hr />
+            <div asp-validation-summary="All" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="DeniedJustification"></label>
+                <input asp-for="DeniedJustification" class="form-control"/>
+                <span asp-validation-for="DeniedJustification" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="SupervisorId"></label>
+                <input asp-for="SupervisorId" class="form-control" readonly/>
+                <span asp-validation-for="SupervisorId" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ApprovalId"></label>
+                <input asp-for="ApprovalId" class="form-control" readonly />
+                <span asp-validation-for="ApprovalId" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="OrderId"></label>
+                <input asp-for="OrderId" class="form-control" readonly/>
+                <span asp-validation-for="OrderId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UserRoleId"></label>
+                <input asp-for="UserRoleId" class="form-control" readonly/>
+                <span asp-validation-for="UserRoleId" class="text-danger"></span>
+            </div>
+            
+            <button type="submit" class="btn btn-primary" asp-route-UserRoleId="@Model.UserRoleId" asp-route-OrderId="@Model.OrderId" asp-route-ApprovalId="@Model.ApprovalId" asp-route-SupervisorId="@Model.SupervisorId">Create User</button>
+        </form>
     </div>
-
-
-
-</form>
-
-@Html.HiddenFor(x => x.ApprovalId)
-@Html.HiddenFor(x => x.OrderId)
-@Html.HiddenFor(x => x.SupervisorId)
-@Html.HiddenFor(x => x.UserRoleId)
+</div>
