--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/DenyOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/DenyOrder.cshtml
@@ -1,50 +1,29 @@
 ﻿@model SupervisorApproval
 
-
 @{
     ViewData["Title"] = "DenyOrder";
 }
 
 <h2>DenyOrder</h2>
+<div>
+    <form method="post" asp-action="DenyOrder">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+        <div class="form-group"
+            <label asp-for="DeniedJustification" class="control-label"></label>
+            <input asp-for="DeniedJustification" class="form-control" />
+            <span asp-validation-for="DeniedJustification" class="text-danger"></span>
+        </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" asp-controller="Supervisor" asp-action="DenyOrder">
-            <h4 style="color: red">@ViewData["Successful"]</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-
-            <div class="form-group">
-                <label asp-for="DeniedJustification"></label>
-                <input asp-for="DeniedJustification" class="form-control"/>
-                <span asp-validation-for="DeniedJustification" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="SupervisorId"></label>
-                <input asp-for="SupervisorId" class="form-control" readonly/>
-                <span asp-validation-for="SupervisorId" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="ApprovalId"></label>
-                <input asp-for="ApprovalId" class="form-control" readonly />
-                <span asp-validation-for="ApprovalId" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="OrderId"></label>
-                <input asp-for="OrderId" class="form-control" readonly/>
-                <span asp-validation-for="OrderId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserRoleId"></label>
-                <input asp-for="UserRoleId" class="form-control" readonly/>
-                <span asp-validation-for="UserRoleId" class="text-danger"></span>
-            </div>
-            
-            <button type="submit" class="btn btn-primary" asp-route-UserRoleId="@Model.UserRoleId" asp-route-OrderId="@Model.OrderId" asp-route-ApprovalId="@Model.ApprovalId" asp-route-SupervisorId="@Model.SupervisorId">Create User</button>
-        </form>
-    </div>
+        <div class="form-group">
+            <button type="submit" asp-route-id="@Model.OrderId" class="btn btn-danger">Deny</button>
+        </div>
+        @Html.HiddenFor(x => x.Id)
+        @Html.HiddenFor(x => x.ApprovalId)
+        @Html.HiddenFor(x => x.OrderId)
+        @Html.HiddenFor(x => x.SupervisorId)
+        @Html.HiddenFor(x => x.UserRoleId)
+    </form>
 </div>
+
+
