--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/EditOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/EditOrder.cshtml
@@ -60,7 +60,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit" asp-route-id="@Model.Id" class="btn btn-primary">Add New Item</button>
+                <button type="submit" asp-route-id="@Model.Id" class="btn btn-primary" >Submit</button>
             </div>
             @Html.HiddenFor(x => x.TimeStamp)
             @Html.HiddenFor(x => x.EmployeeId)
@@ -71,5 +71,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ViewOrders">Back to List</a>
 </div>
