--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
@@ -67,22 +67,28 @@
 
             @foreach (RequestWithVendor req in Model.RequestsWithVendor)
             {
-            <tr>
-                <td>@req.QuantityRequested</td>
-                <td>@req.ItemName</td>
-                <td>@req.Description</td>
-                <td>@req.EstimatedCost</td>
-                <td>@req.EstimatedTotal</td>
-                
-            </tr>
+                <tr>
+                    <td>@req.QuantityRequested</td>
+                    <td>@req.ItemName</td>
+                    <td>@req.Description</td>
+                    <td>@req.EstimatedCost</td>
+                    <td>@req.EstimatedTotal</td>
+
+                </tr>
 
             }
 
         </table>
 
-        <a asp-controller="Request" asp-action="AddItem" asp-route-orderId="@Model.Id" class="btn btn-default">Add New Item</a>
-        <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-default">Submit</a>
+        @if (Model.StatusId == 1)
+        {
+            <a asp-controller="Request" asp-action="AddItem" asp-route-orderId="@Model.Id" class="btn btn-primary">Add New Item</a>
+            <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-primary">Submit</a>
+        }
+
 
     }
+
+
 
 </div>
