--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/AuditorMenu/Default.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/AuditorMenu/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PurchaseReq.MVC.Components.SupervisorMenuItem>
+﻿@model IEnumerable<PurchaseReq.MVC.Components.AuditorMenuItem>
 
 <li class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
