--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/CFOMenu/Default.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/CFOMenu/Default.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<PurchaseReq.MVC.Components.CFOMenuItem>
 
     <li class="dropdown">
-        <a asp-controller="Admin"
-           asp-action="Index"
-           class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
+        <a class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
         <ul class="dropdown-menu">
             @foreach (var menuItem in Model)
             {
                 <li>
-                    <a asp-controller="Admin" asp-action=@menuItem.ActionValue>@menuItem.DisplayValue</a>
+                    <a asp-controller=@menuItem.ControllerValue asp-action=@menuItem.ActionValue>@menuItem.DisplayValue</a>
                 </li>
             }
         </ul>
