--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/UserMenu/Default.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/UserMenu/Default.cshtml
@@ -1,9 +1,7 @@
 ﻿@model IEnumerable<PurchaseReq.MVC.Components.UserMenuItem>
 
 <li class="dropdown">
-    <a asp-controller="Admin"
-       asp-action="Index"
-       class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
+    <a class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
     <ul class="dropdown-menu">
         @foreach (var menuItem in Model)
         {
